--- a/index.html
+++ b/index.html
@@ -1,262 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css" />
     <title>ALftoon **</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- srart section one (** header **) -->
     <section class="header">
-      <div class="header-nav">
-        <nav>
-          <a href="index.html"><img src="images/logo.svg" alt="logo" /></a>
-          <ul>
-            <li><a href="#" class="link">الرئيسية</a></li>
-            <li><a href="#" class="link">حمل التطبيق </a></li>
-            <li><a href="#" class="link">صور التطبيق </a></li>
-            <li><a href="#" class="link">تواصل معنا </a></li>
-          </ul>
-          <button>تواصل</button>
-        </nav>
-      </div>
+        <div class="header-nav">
+            <nav>
+                <a href="index.html"><img src="images/logo.svg" alt="logo" /></a>
+                <ul>
+                    <li><a href="#" class="link">الرئيسية</a></li>
+                    <li><a href="#" class="link">حمل التطبيق </a></li>
+                    <li><a href="#" class="link">صور التطبيق </a></li>
+                    <li><a href="#" class="link">تواصل معنا </a></li>
+                </ul>
+                <button>تواصل</button>
+            </nav>
+        </div>
     </section>
     <!-- over-view -->
     <section class="over-view">
-      <div class="over-view-text">
-        <h1>ALFTOON</h1>
-        <p>
-          حمل التطبيق الان وحافظ علي نظافة مركبتك <br />
-          يمكنك استخدام التطبيق بكل سهوله لتنظيف وغسيل جميع انواع المركبات
-        </p>
-        <button class="play">
-          GOOGLE PLAY <ion-icon name="bag-outline"></ion-icon>
-        </button>
-        <button class="app">
-          APP STORE <ion-icon name="logo-apple"></ion-icon>
-        </button>
-      </div>
-      <div class="over-view-imge">
-        <div class="shap"></div>
-        <div class="shap-img"></div>
-      </div>
+        <div class="over-view-text" data-aos="fade-right">
+            <h1>ALFTOON</h1>
+            <p>
+                حمل التطبيق الان وحافظ علي نظافة مركبتك <br />
+                يمكنك استخدام التطبيق بكل سهوله لتنظيف وغسيل جميع انواع المركبات
+            </p>
+            <button class="play">
+                GOOGLE PLAY <ion-icon name="bag-outline"></ion-icon>
+            </button>
+            <button class="app">
+                APP STORE <ion-icon name="logo-apple"></ion-icon>
+            </button>
+        </div>
+        <div class="over-view-imge" data-aos="fade-left">
+            <div class="shap"></div>
+            <div class="shap-img"></div>
+        </div>
     </section>
     <!-- end section one **************** -->
     <!-- start section two (features ........ ) -->
 
     <section class="features">
         <h2>بعض من خصائص التطبيق المميزة <span></span></h2>
-        <div class="all">
-          <div class="odd">
-            <ion-icon name="layers-outline"></ion-icon>
-            <p>سهل الاستخدام</p>
-            <span></span>
-          </div>
-          <div class="even">
-            <ion-icon name="sparkles-outline"></ion-icon>
-            <p>الواجهة المميزة</p>
-            <span></span>
-          </div>
-          <div class="odd">
-            <ion-icon name="chatbox-ellipses-outline"></ion-icon>
-            <p>الدعم الفني</p>
-            <span></span>
-          </div>
-          <div class="even">
-            <ion-icon name="settings-outline"></ion-icon>
-            <p>التحديث الدائم</p>
-            <span></span>
-          </div>
-          <div class="odd">
-            <ion-icon name="bag-check-outline"></ion-icon>
-            <p>الامان والخصوصيه</p>
-            <span></span>
-          </div>
+        <div class="all" data-aos="zoom-in-up">
+            <div class="odd">
+                <ion-icon name="layers-outline"></ion-icon>
+                <p>سهل الاستخدام</p>
+                <span></span>
+            </div>
+            <div class="even">
+                <ion-icon name="sparkles-outline"></ion-icon>
+                <p>الواجهة المميزة</p>
+                <span></span>
+            </div>
+            <div class="odd">
+                <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+                <p>الدعم الفني</p>
+                <span></span>
+            </div>
+            <div class="even">
+                <ion-icon name="settings-outline"></ion-icon>
+                <p>التحديث الدائم</p>
+                <span></span>
+            </div>
+            <div class="odd">
+                <ion-icon name="bag-check-outline"></ion-icon>
+                <p>الامان والخصوصيه</p>
+                <span></span>
+            </div>
         </div>
-      </section>
+    </section>
 
-       <!-- start section thre  (prices ) -->
-       <section class="prices1">
+    <!-- start section thre  (prices ) -->
+    <section class="prices1">
         <h1>الخطط والاسعار <span></span></h1>
         <div class="prices">
-          <div>
-            <ion-icon name="wallet" class="icons"></ion-icon>
-            <h3>الخدمه الذهبية</h3>
-            <button>150 درهم</button>
-            <p>
-              غسيل من الخارج وغسيل من الداخل غسيل كيماوي وتنظيف القاعده وتلميع
-              الزجاج وتبخير السيارة
-            </p>
-          </div>
-          <div class="center">
-            <ion-icon name="wallet" class="icons"></ion-icon>
-            <h3>الخدمه الفضيه</h3>
-            <button>100 درهم</button>
-            <p>
-              غسيل من الخارج وغسيل من الداخل غسيل كيماوي وتنظيف القاعده وتلميع
-              الزجاج
-            </p>
-          </div>
+            <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+                <ion-icon name="wallet" class="icons"></ion-icon>
+                <h3>الخدمه الذهبية</h3>
+                <button>150 درهم</button>
+                <p>
+                    غسيل من الخارج وغسيل من الداخل غسيل كيماوي وتنظيف القاعده وتلميع
+                    الزجاج وتبخير السيارة
+                </p>
+            </div>
+            <div class="center" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+                <ion-icon name="wallet" class="icons"></ion-icon>
+                <h3>الخدمه الفضيه</h3>
+                <button>100 درهم</button>
+                <p>
+                    غسيل من الخارج وغسيل من الداخل غسيل كيماوي وتنظيف القاعده وتلميع
+                    الزجاج
+                </p>
+            </div>
 
-          <div>
-            <ion-icon name="wallet" class="icons"></ion-icon>
-            <h3>الخدمه البرونزية</h3>
-            <button>50 درهم</button>
-            <p>غسيل من الخارج وغسيل من الداخل وتنظيف القاعده وتلميع الزجاج</p>
-          </div>
+            <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+                <ion-icon name="wallet" class="icons"></ion-icon>
+                <h3>الخدمه البرونزية</h3>
+                <button>50 درهم</button>
+                <p>غسيل من الخارج وغسيل من الداخل وتنظيف القاعده وتلميع الزجاج</p>
+            </div>
         </div>
-      </section>
-      <!-- start section four (download) -->
-      <section class="download-app">
+    </section>
+    <!-- start section four (download) -->
+    <section class="download-app" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
         <div class="download-app-text">
-          <h2>حمل التطبيق الان ...</h2>
-          <p>
-            يمكنك الآن تنزيل التطبيق على هاتفك المحمول من خلال Google Play أو
-            App Store. بادر الآن بتنزيل التطبيق واستمتع بسهولة استخدام التطبيق
-          </p>
-          <button class="play">GOOGLE PLAY</button>
-          <button class="app">APP STORE</button>
+            <h2>حمل التطبيق الان ...</h2>
+            <p>
+                يمكنك الآن تنزيل التطبيق على هاتفك المحمول من خلال Google Play أو
+                App Store. بادر الآن بتنزيل التطبيق واستمتع بسهولة استخدام التطبيق
+            </p>
+            <button class="play">GOOGLE PLAY</button>
+            <button class="app">APP STORE</button>
         </div>
         <div class="download-app-imag"></div>
-      </section>
+    </section>
 
-       <!-- start section five (counter ) -->
-       <section class="counter">
+    <!-- start section five (counter ) -->
+    <section class="counter" data-aos="fade-up" data-aos-anchor-placement="top-center">
         <div class="counter-text">
-          <h2>لماذا تختارنا ...</h2>
-          <p>نعرض لك بعض احصائيات التطبيق</p>
+            <h2>لماذا تختارنا ...</h2>
+            <p>نعرض لك بعض احصائيات التطبيق</p>
         </div>
         <div class="counter-count">
-          <div>
-            <ion-icon name="heart-outline"></ion-icon>
-            <h2>200 M</h2>
-            <p>تقييم ايجابي</p>
-          </div>
-          <div>
-            <ion-icon name="happy-outline"></ion-icon>
-            <h2>500 K</h2>
-            <p>5 نجوم</p>
-          </div>
-          <div>
-            <ion-icon name="cloud-download-outline"></ion-icon>
-            <h2>M 1</h2>
-            <p>كل التحميلات</p>
-          </div>
-          <div>
-            <ion-icon name="person-outline"></ion-icon>
-            <h2>K 300</h2>
-            <p>عميل نشط</p>
-          </div>
+            <div class="item">
+                <ion-icon name="heart-outline"></ion-icon>
+                <h2 class="count" data-number="100"> 0 </h2>
+                <p>تقييم ايجابي</p>
+            </div>
+            <div class="item">
+                <ion-icon name="happy-outline"></ion-icon>
+                <h2 class="count" data-number="200">0 </h2>
+                <p>5 نجوم</p>
+            </div>
+            <div class="item">
+                <ion-icon name="cloud-download-outline"></ion-icon>
+                <h2 class="count" data-number="400"> 0</h2>
+                <p>كل التحميلات</p>
+            </div>
+            <div class="item">
+                <ion-icon name="person-outline"></ion-icon>
+                <h2 class="count" data-number="300">0</h2>
+                <p>عميل نشط</p>
+            </div>
         </div>
-      </section>
+    </section>
 
-      <div class="swiper mySwiper">
+
+    <div class="swiper mySwiper" data-aos="fade-down">
         <h2>صور التطبيق</h2>
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="images/slider-one/01.jpeg" alt="01" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/02.jpeg" alt="02" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/03.jpeg" alt="03" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/04.jpeg" alt="04" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/05.jpeg" alt="05" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/06.jpeg" alt="06" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/07.jpeg" alt="07" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/08.jpeg" alt="08" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/09.jpeg" alt="09" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/10.jpeg" alt="10" />
-          </div>
-          <div class="swiper-slide">
-            <img src="images/slider-one/11.jpeg" alt="11" />
-          </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/01.jpeg" alt="01" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/02.jpeg" alt="02" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/03.jpeg" alt="03" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/04.jpeg" alt="04" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/05.jpeg" alt="05" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/06.jpeg" alt="06" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/07.jpeg" alt="07" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/08.jpeg" alt="08" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/09.jpeg" alt="09" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/10.jpeg" alt="10" />
+            </div>
+            <div class="swiper-slide">
+                <img src="images/slider-one/11.jpeg" alt="11" />
+            </div>
         </div>
         <div class="swiper-pagination"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
-      </div>
+    </div>
 
-      <!-- start section seven (contact us) -->
-      <section class="contact-us">
+    <!-- start section seven (contact us) -->
+    <section class="contact-us" data-aos="fade-down-left">
         <h2>تواصل معنا</h2>
         <p>تواصل معنا في اي وقت علي مدار اليوم</p>
         <div class="contact">
-          <div class="input">
-            <input type="text" name="" placeholder="الاسم " />
-            <input type="email" name="" placeholder="الايميل " />
-            <input type="text" name="" placeholder="الموضوع " />
-          </div>
-          <div class="area">
-            <textarea
-              name=""
-              id=""
-              cols="50"
-              rows="6"
-              placeholder="الرسالة"
-            ></textarea>
-          </div>
+            <div class="input">
+                <input type="text" name="" placeholder="الاسم " />
+                <input type="email" name="" placeholder="الايميل " />
+                <input type="text" name="" placeholder="الموضوع " />
+            </div>
+            <div class="area">
+                <textarea name="" id="" cols="50" rows="6" placeholder="الرسالة"></textarea>
+            </div>
         </div>
-      </section>
+    </section>
 
-      <!-- start section  four (footer)  -->
-      <section class="footer">
+    <!-- start section  four (footer)  -->
+    <section class="footer" data-aos="fade-down-left">
         <div class="flex0">
-          <div class="one">
-            <h3>ALFTOON</h3>
-            <p>لخدمات تنظيف وغسيل جميع أنواع المركبات</p>
-          </div>
-          <div class="two">
-            <h3>روابط الصفحه</h3>
-            <p>الرئيسيه</p>
-            <p>صور التطبيق</p>
-            <p>حمل التطبيق</p>
-            <p>تواصل معنا</p>
-          </div>
-          <div class="three">
-            <h3>الدعم</h3>
-            <p>تواصل</p>
-            <p>سياسه الخصوصيه</p>
-          </div>
-          <div class="four">
-            <h3>حمل الان</h3>
-            <button>Google Play</button>
-            <button>App Store</button>
-          </div>
+            <div class="one">
+                <h3>ALFTOON</h3>
+                <p>لخدمات تنظيف وغسيل جميع أنواع المركبات</p>
+            </div>
+            <div class="two">
+                <h3>روابط الصفحه</h3>
+                <p>الرئيسيه</p>
+                <p>صور التطبيق</p>
+                <p>حمل التطبيق</p>
+                <p>تواصل معنا</p>
+            </div>
+            <div class="three">
+                <h3>الدعم</h3>
+                <p>تواصل</p>
+                <p>سياسه الخصوصيه</p>
+            </div>
+            <div class="four">
+                <h3>حمل الان</h3>
+                <button>Google Play</button>
+                <button>App Store</button>
+            </div>
         </div>
-      </section>
+    </section>
     </div>
-
-      <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-      <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
