--- a/index.html
+++ b/index.html
@@ -12,47 +12,55 @@
 </head>
 
 <body>
+
+    
     <!-- srart section one (** header **) -->
-    <section class="header">
-        <div class="header-nav">
-            <nav>
-                <a href="index.html"><img src="images/logo.svg" alt="logo" /></a>
-                <ul>
-                    <li><a href="#" class="link">الرئيسية</a></li>
-                    <li><a href="#" class="link">حمل التطبيق </a></li>
-                    <li><a href="#" class="link">صور التطبيق </a></li>
-                    <li><a href="#" class="link">تواصل معنا </a></li>
-                </ul>
-                <button>تواصل</button>
-            </nav>
-        </div>
+    <section class="nav-section">
+        <section class="header">
+            <div class="header-nav">
+                <nav>
+                    <a href="index.html"><img src="images/logo.svg" alt="logo" /></a>
+                    <ul>
+                        <li><a href="#home" class="link active">الرئيسية</a></li>
+                        <li><a href="#download" class="link">حمل التطبيق </a></li>
+                        <li><a href="#photo" class="link">صور التطبيق </a></li>
+                        <li><a href="#contact" class="link">تواصل معنا </a></li>
+                    </ul>
+                    <button>تواصل</button>
+                    <div class="hamburger">
+                        <ion-icon name="menu-outline"></ion-icon>
+                    </div>
+                </nav>
+            </div>
+        </section>
+        <!-- over-view -->
+        <section class="over-view" id="home">
+            <div class="over-view-text">
+                <h1 class="auto-write">ALFTOON</h1>
+                <p>
+                    حمل التطبيق الان وحافظ علي نظافة مركبتك <br />
+                    يمكنك استخدام التطبيق بكل سهوله لتنظيف وغسيل جميع انواع المركبات
+                </p>
+                <button class="play">
+                    GOOGLE PLAY <ion-icon name="bag-outline"></ion-icon>
+                </button>
+                <button class="app">
+                    APP STORE <ion-icon name="logo-apple"></ion-icon>
+                </button>
+            </div>
+            <div class="over-view-imge" data-aos="fade-left">
+                <div class="shap"></div>
+                <div class="shap-img"></div>
+            </div>
+        </section>
+        <!-- end section one **************** -->
     </section>
-    <!-- over-view -->
-    <section class="over-view">
-        <div class="over-view-text" data-aos="fade-right">
-            <h1>ALFTOON</h1>
-            <p>
-                حمل التطبيق الان وحافظ علي نظافة مركبتك <br />
-                يمكنك استخدام التطبيق بكل سهوله لتنظيف وغسيل جميع انواع المركبات
-            </p>
-            <button class="play">
-                GOOGLE PLAY <ion-icon name="bag-outline"></ion-icon>
-            </button>
-            <button class="app">
-                APP STORE <ion-icon name="logo-apple"></ion-icon>
-            </button>
-        </div>
-        <div class="over-view-imge" data-aos="fade-left">
-            <div class="shap"></div>
-            <div class="shap-img"></div>
-        </div>
-    </section>
-    <!-- end section one **************** -->
+
     <!-- start section two (features ........ ) -->
 
-    <section class="features">
+    <section class="features" data-aos="fade-left">
         <h2>بعض من خصائص التطبيق المميزة <span></span></h2>
-        <div class="all" data-aos="zoom-in-up">
+        <div class="all" >
             <div class="odd">
                 <ion-icon name="layers-outline"></ion-icon>
                 <p>سهل الاستخدام</p>
@@ -82,10 +90,10 @@
     </section>
 
     <!-- start section thre  (prices ) -->
-    <section class="prices1">
+    <section class="prices1" data-aos="fade-left">
         <h1>الخطط والاسعار <span></span></h1>
         <div class="prices">
-            <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+            <div>
                 <ion-icon name="wallet" class="icons"></ion-icon>
                 <h3>الخدمه الذهبية</h3>
                 <button>150 درهم</button>
@@ -94,7 +102,7 @@
                     الزجاج وتبخير السيارة
                 </p>
             </div>
-            <div class="center" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+            <div class="center">
                 <ion-icon name="wallet" class="icons"></ion-icon>
                 <h3>الخدمه الفضيه</h3>
                 <button>100 درهم</button>
@@ -104,7 +112,7 @@
                 </p>
             </div>
 
-            <div data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
+            <div>
                 <ion-icon name="wallet" class="icons"></ion-icon>
                 <h3>الخدمه البرونزية</h3>
                 <button>50 درهم</button>
@@ -113,7 +121,7 @@
         </div>
     </section>
     <!-- start section four (download) -->
-    <section class="download-app" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+    <section class="download-app" id="download">
         <div class="download-app-text">
             <h2>حمل التطبيق الان ...</h2>
             <p>
@@ -127,7 +135,7 @@
     </section>
 
     <!-- start section five (counter ) -->
-    <section class="counter" data-aos="fade-up" data-aos-anchor-placement="top-center">
+    <section class="counter" data-aos="fade-left">
         <div class="counter-text">
             <h2>لماذا تختارنا ...</h2>
             <p>نعرض لك بعض احصائيات التطبيق</p>
@@ -157,7 +165,7 @@
     </section>
 
 
-    <div class="swiper mySwiper" data-aos="fade-down">
+    <div class="swiper mySwiper" id="photo" data-aos="fade-left">
         <h2>صور التطبيق</h2>
         <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -200,7 +208,7 @@
     </div>
 
     <!-- start section seven (contact us) -->
-    <section class="contact-us" data-aos="fade-down-left">
+    <section class="contact-us" id="contact" data-aos="fade-left" >
         <h2>تواصل معنا</h2>
         <p>تواصل معنا في اي وقت علي مدار اليوم</p>
         <div class="contact">
@@ -210,13 +218,13 @@
                 <input type="text" name="" placeholder="الموضوع " />
             </div>
             <div class="area">
-                <textarea name="" id="" cols="30" rows="4" placeholder="الرسالة"></textarea>
+                <textarea placeholder="الرسالة"></textarea>
             </div>
         </div>
     </section>
 
     <!-- start section  four (footer)  -->
-    <section class="footer" data-aos="fade-down-left">
+    <section class="footer" id="footer">
         <div class="flex0">
             <div class="one">
                 <h3>ALFTOON</h3>
@@ -224,10 +232,10 @@
             </div>
             <div class="two">
                 <h3>روابط الصفحه</h3>
-                <p>الرئيسيه</p>
-                <p>صور التطبيق</p>
-                <p>حمل التطبيق</p>
-                <p>تواصل معنا</p>
+                <p><a href="#home">الرئيسيه</a></p>
+                <p><a href="#download"> حمل التطبيق </a></p>
+                <p><a href="#photo">صور التطبيق</a></p>
+                <p><a href="#contact">تواصل معنا</a></p>
             </div>
             <div class="three">
                 <h3>الدعم</h3>
@@ -242,6 +250,10 @@
         </div>
     </section>
     </div>
+    <button class="scroll" id="myBtn" onclick="topFunction()" >
+        <ion-icon name="arrow-up-outline" ></ion-icon>
+    </button> 
+        
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
